--- a/templates/cardviewer.html
+++ b/templates/cardviewer.html
@@ -30,7 +30,7 @@
     margin-top: 25px;
   }}
   .hidden {{
-    display: none;
+    display: none !important;
   }}
   .cardtemplate {{
     height: 204px;
